production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiverr
  namespace: fiverr
spec:
  selector:
    app: fiverr
  ports:
  - port: 80
    targetPort: 80
